# programmer_wifi

./: .gitignore  CMakeLists.txt  README.MD  platformio.ini
components/task_programmer01/: CMakeLists.txt  task_programmer01.c
components/task_programmer01/include/: task_programmer01.h
components/wifi01/: CMakeLists.txt
components/wifi01/include/: wifi_key.h
lib/task_programmer01/: task_programmer01.c  task_programmer01.h
src/: CMakeLists.txt  main_programmer.c
